# critical-phase-detect

./: .gitignore  pyproject.toml  todo.md
configs/: config.yaml
configs/encoder/: tldr.yaml
configs/env/: libero_long.yaml
configs/experiment/: labeling.yaml  nav2d.yaml
configs/policy/: pi0.yaml  pi0_5.yaml  ppo_refiner.yaml
paper/: agent.md  paper.md  paper_ko.md  paper_plan.md  plan.md  refinement_plan_option_a.md  refinement_plan_option_b.md
paper/figures/: make_overview_fig.py  make_triplet_fig.py
reports/: alternatives.md  t3_install_notes.md
reports/exp1/: metrics.json  summary.md
reports/exp1/critical_phase/: per_episode.json
reports/exp2/: explain.md  explain_env_randomization.md  explain_g2_bridge.md  explain_tldr_contrastive.md  summary.md
reports/exp2/critical_phase/: README.md  per_episode.json
scripts/: collect_libero_rollouts.py  eval_cpd.py  eval_cpd_pipeline.py  extract_critical_phase.py  extract_libero_proprio.py  render_rollout_mp4.py  run_annotator.py  setup_libero_venv.sh  sweep_cpd_n.py  sweep_cpd_n_loocv.py  train_nav2d.py  train_tldr.py
src/cpd/: __init__.py  wandb_utils.py
tests/: test_imports.py
tests/core/: test_buffer.py  test_conf.py  test_kde.py  test_labeler.py  test_pipeline.py  test_reward.py  test_trajectory.py
tests/encoders/: test_identity.py  test_tldr.py
tests/envs/: test_libero.py  test_nav2d.py
tests/eval/: test_metrics.py  test_rlt_baseline.py
tests/labeling/: test_rubric.py  test_store.py
tests/policies/: test_pi0.py  test_pi0_5.py  test_ppo_refiner.py
tests/viz/: test_plots.py
(+37 files in other folders)
